--- a/css/faq.css
+++ b/css/faq.css
@@ -486,6 +486,8 @@
 
 .booking__fieldset {
     /* position: relative; */
+    flex-wrap: wrap;
+    gap: 60px;
     display: flex;
     justify-content: space-between;
     border: 0 none;
