--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body {
     font-size: 20px;
     line-height: 28px;
     background-color: #1B1A1B;
-    color: #FFFFFF;
     margin: 0;
 }
 
@@ -91,4 +90,15 @@ iframe {
     padding-right: 30px;
     margin-left: auto;
     margin-right: auto;
+}
+
+
+a,svg:focus { 
+    outline: none;
+    font-weight: 700; 
+}
+
+input:focus {
+    outline:none;
+    /* font-weight: 900;  */
 }
